deliver-messages-by-voice-is-now-implmented

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,10 @@
 .bg-customGradient{
   background-image: linear-gradient(to right,#ec4899, #a855f7, #3b82f6);
 }
+.scrollable-div {
+  /* Set a fixed height for the div */
+  max-height: 740px ; /* Example height, adjust as needed */
+
+  /* Enable scrolling */
+  overflow-y: auto; /* Vertical scrolling */
+}
