--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,3 +19,16 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+.video-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.video {
+  width: 300px;
+  height: 200px;
+  border: 1px solid #ccc;
+}
